[b]0.45beta[/b] (Apr 8, 2014)
*Fixed the detached portraits strata. They should now overlap the player and target frame.
*Fixed the xp/rep text format not changing cause were calling ElvUI's text format option. Added an option in BenikUI.
*BenikUI chat datatexts will hide when default ElvUI ones are shown. (needs a moar testing.. going to bed)
*Updated locales.
*Added the logo at the options. Probably I will remove it.. dunno yet
*Added a couple of frames not styled.

[b]0.44beta[/b] (Apr 6, 2014)
*Reworked the xp and rep on PlayerBar. This time it's perfectofinal :P
*Cleanup.

[b]0.43beta[/b] (Apr 4, 2014)
*BenikUI style in Shadow & Light edit.
*Detached Portraits at last! (Big thanks to Blazeflack).
*Added an option to make the non overlayed portraits transparent (detached or not).
*Removed the XP & Rep "Hide Text" option on the PlayerBar. Way too many checks with minimal result. Hiding the text can still be done in ElvUI General options.
*Applied a small fix for Skada style (Thanks Azilroka).
*Renamed the Mail datatext to BuiMail, so it doesn't conflict or show as duplicate, if another addon adds a similar datatext.

[b]0.42beta[/b] (Apr 2, 2014)
*Added 3 color themes plus the default ElvUI. 'Diablo' (dark red), 'Mists' (dark green), 'Hearthstone' (dark blue). Available in BenikUI options or in the install (step 3).
*Added AtlasLoot, Altoholic styled skin.
*Changed Tooltip statusbar texture.

[b]0.41beta[/b] (Mar 29, 2014)
*Added the default options for Target detached frame.

[b]0.40beta[/b] (Mar 29, 2014)
*Tiny changes on skin styling.
*Made another attempt on Target Detached Portrait. Mirrored the player one. Something is missing. Doesn't get the target changes onload. Re-enabling it or make any changes on target it applies.. reload and go kill yourself

[b]0.39beta[/b] (Mar 28, 2014)
*Reverted to Azilroka's skin file after his latest update in AddOnSkins (v2.15). A bit more fine tuning may needed.